Historical section for previous versions of genDevConfig/genRtrConfig 2.x

The historical format which included a combined changelog/credit/features
has been split up to use the standard CREDITS, CHANGES format and changelog
is handled by the sourceforge cvs cricket.sourceforge.net

===============================================================================
22/01/2007

# Version 2_0_0beta14
#
# Major new features
#
# - New CSS1100 cricket plugin
# - Support for DS1 serial interface statistics

11/05/2005

# Version 2_0_0beta12
#
# Major new features
#
# - Now uses GetOpts::Long module for args processing. 
#   Much more robust options matching.
# - --nospeedcheck option added
# - Support for greater than gig interfaces
# - Supports multiple plugin matches for a given device
# - Brand new Foundry plugin based on CHIRP ServerIron plugin
# - FIX: NortelAccelar plugin now recognizes devices correctly.
# - Defaults have been cleaned up commented and split by vendor.
#   It should now be much, much easier to understand what is going on!
# - Many, many, many internal changes.

05/05/2005

# Version 2_0_0beta11
#
# Major new features
#
# - added --nomtucheck and nospeedcheck for sanity checking overrides.
# - Cleaned up Debug and Info output to be more readable.
# - various internal changes, see cvs commit info.

# Version 2_0_0beta10
#
# NOTICE! Compatibility with previous version of genDevConfig and genRtrConfig
# has been maintained. Please refrain from using beta9.
#
# Please update all plugins, libraries, defaults and main script. This
# is a major release.
#
# Major new features
# 
# - new option:  -o, --ouputdir Provide the output dir for target being created
# - added dot3stat support check for extended mib stats. (Andrew cutler)
# - modified back-end for --monitors. Will now use cricket config tree
#   monitorType's as definitions for monitor-thresholds. This feature
#   requires the monitorType patch to HandleTarget in sourceforge.