@@ -27,7 +27,7 @@ Jake Brutlag
 - Help with Holt-Winter support.
 Joe Nave
 - QA
-Andrew Cutler, andrewc _AT_ xtra . co . nz
+Andrew Cutler, andrewc at-the-domain xtra . co . nz
 - Ideas, QA, patches, and more patches.
 John Deatherage
 - Patches
@@ -45,25 +45,29 @@ Ann Truxton
 - Fix
 Ole Hansen
 - Fix
-Dave Rynne, dave _AT_ esat.net
+Dave Rynne, dave at-the-domain esat.net
 - Fix
-Sergey Eremenko, s.eremenko _AT_ rtcomm-yug . ru
+Sergey Eremenko, s.eremenko at-the-domain rtcomm-yug . ru
 - Patch
-Karl Carsten, ckarl _AT_ mpi-sb . mpg . de
+Karl Carsten, ckarl at-the-domain mpi-sb . mpg . de
 - Patches
-Cougar, cougar _AT_ random . ee
+Cougar, cougar at-the-domain random . ee
 - Ideas, patches
-Huw Lynch, huw_lynch _AT_ yahoo . com
-- QA, patches
-Ed Ravin, eravin _AT_ panix . com
+Huw Lynch, huw_lynch at-the-domain yahoo . com
+- QA, patches, CiscoCSS cricket module
+Ed Ravin, eravin at-the-domain panix . com
 - QA 
-Stanislav Sinyagin, ssinyagin _AT_ yahoo . com
+Stanislav Sinyagin, ssinyagin at-the-domain yahoo . com
 - Ideas
-Bruno Clermont, bruno _AT_ gnome . ca
+Bruno Clermont, bruno at-the-domain gnome . ca
 - Ideas, complaints and being a pest about things that don't work.
-Michael H. Lambert, lambert _AT_ psc . edu
+Michael H. Lambert, lambert at-the-domain psc . edu
 - Patches
-Alan Edmonds, alan . edmonds _AT_ t-mobile . net
-- Patch
-If you have been forgotten, please send me a note. fmikus _AT_ acktomic . com
+Alan Edmonds, alan . edmonds at-the-domain t-mobile . net
+- Patches
+Scott Nolin, scottn at-the-domain ssec . wisc . edu
+- Cricket template for Sensatronics EM1
+Ray Burkholder, rburkholder at-the-domain oneunifieed . net
+- Ideas, patches
+If you have been forgotten, please send me a note. fmikus at-the-domain acktomic . com
 
