@@ -1,0 +1,177 @@
+# Generic network device sub-tree defaults - for use with genDevConfig
+#
+#
+# This file is formated with a tab width of 4.
+#
+###############################################################################
+# If you're using this version of genRtrConfig with Cricket 1.02 or earlier
+# you will need SNMP_Session 0.77 or later, or a new version of Net_SNMP.
+###############################################################################
+#
+# For additional information on the features and use of genDevConfig consult
+# http://www.acktomic.com/cricket/cricket.htm or see the help provided on the
+# command-line in your distribution of genDevConfig.
+#
+#
+###############################################################################
+
+
+###############################################################################
+#
+# Setup the default variables that apply to all targets that are defined
+# within this part of the config-tree hierarchy.
+#
+# All variables can be overriden by redefinition higher in the config-tree.
+#
+#
+###############################################################################
+
+### Sensatronics OIDs
+
+OID em1 1.3.6.1.4.1.16174.1.1.3.3
+
+###############################################################################
+#
+# Datasources define the type of data and the period of the data retrieved
+#
+#
+###############################################################################
+
+###############################################################################
+###
+### Datasource for sensatronics
+###
+###############################################################################
+
+datasource em1group1temp
+        ds-source = snmp://%snmp%/em1.1.3.0
+datasource em1group1humidity
+        ds-source = snmp://%snmp%/em1.1.6.0
+# if you use wetness probes -
+#datasource em1group1wetness
+#        ds-source = snmp://%snmp%/em1group1.9.0
+datasource em1group2temp
+        ds-source = snmp://%snmp%/em1.2.3.0
+datasource em1group2humidity
+        ds-source = snmp://%snmp%/em1.2.6.0
+datasource em1group3temp
+        ds-source = snmp://%snmp%/em1.3.3.0
+datasource em1group3humidity
+        ds-source = snmp://%snmp%/em1.3.6.0
+datasource em1group4temp
+        ds-source = snmp://%snmp%/em1.4.3.0
+datasource em1group4humidity
+        ds-source = snmp://%snmp%/em1.4.6.0
+
+
+###############################################################################
+#
+# targetType's are the device definitions that will tell cricket what to retrieve
+# from the device, and how should should be displayed. Each target that is defined
+# in a target file should be associated with a targetType, so that cricket knows
+# how to treat the target.
+#
+# Empty target statements can be used for some targets that you don't want to pull
+# data from. Examples are Chassis's of devices for which the OIDs haven't been detailed
+# yet(temperature, cpu, memory). 
+#
+# See cricket.sourceforge.net for documentation on the definitions found in
+#  this file
+# 
+#
+###############################################################################
+
+
+#this example is only using three probes
+#change the view = line to fit what you have
+TargetType sensatronics-em1
+        ds = "em1group1temp, em1group1humidity, em1group2temp, em1group2humidity, em1group3temp, em1group3humidity, em1group4temp, em1group4humidity"
+        view = "Temperature 1: em1group1temp,
+        Temperature 3: em1group3temp,
+        Temperature 4: em1group4temp,
+        Temperature Combined: em1group1temp em1group3temp em1group4temp,
+        Humidity 3: em1group3humidity"
+
+###############################################################################
+#
+## monitorType definitions
+#
+# The short definition: These are monitor threshold templates that can be
+# associated with targets in the config-tree. Each monitorType is reference using
+# the monitor-type key and the value is the monitorType.
+#
+## These are the device definitions that will tell cricket what to monitor
+# from the device, and how should should acted on. Each target that is defined
+# in a target file can be associated with a monitorType, so that cricket knows
+# how to treat threshold monitoring for the target.
+#
+# Empty monitorType statements can be used for some targets that you don't want to monitor.
+# Examples are Chassis's of devices for which the OIDs haven't been detailed
+# yet(temperature, cpu, memory).
+#
+# See cricket.sourceforge.net for documentation on the definitions found in
+#  this file
+#
+###############################################################################
+
+
+#monitorType chassis
+#    monitor-thresholds =
+#        "cpu5min:value:n:75:META:router-cpu:dark-red:SPAN:3,
+#         cpu5min:value:n:1:META:router-cpu:yellow:SPAN:3
+#        "
+
+###############################################################################
+#
+#
+## map definitions
+# This dict is used to control the instance mapping code.
+# See the docs for more information about the map dictionary.
+#
+#
+###############################################################################
+
+# None defined
+
+###############################################################################
+#
+# "graph" statements define how the data should be displayed in the graphic.
+# Most of the variables defined are directly mapped to the rrdtool graph tool
+# that is used to generate the graphics.
+#
+#
+###############################################################################
+
+
+graph em1group1temp
+    units       =   "F"
+    legend = "Temperature 1"
+
+graph em1group2temp
+    units       =   "F"
+    legend = "Temperature 2"
+
+graph em1group3temp
+        legend = "Temperature 3"
+    units       =   "F"
+
+graph em1group4temp
+    legend = "Temperature 4"
+    units       =   "F"
+
+graph em1group1humidity
+        legend = "Humidity 1"
+        units = "%"
+
+graph em1group2humidity
+        legend = "Humidity 2"
+        units = "%"
+
+graph em1group3humidity
+        legend = "Humidity 3"
+        units = "%"
+
+graph em1group4humidity
+        legend = "Humidity 4"
+        units = "%"
+
